trying to fix android fixed panel overflow

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -84,6 +84,7 @@ button {
 
         footer {
             position: fixed;
+            -webkit-backface-visibility: hidden;
             right: 0;
             bottom: 0;
             left: 0;
