--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -2,6 +2,7 @@
 
 header {
     position: fixed;
+    -webkit-backface-visibility: hidden;
     z-index: 99;
     top: 0;
     right: 0;
